fix: improve formatting of testimonials on mobile

--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -42,30 +42,19 @@
 	grid-auto-columns: 100%;
 	width: 70%;
 	padding: 2rem;
-	margin: 2rem 0;
 	gap: 4rem;
 	font-family: Rubik;
 	overflow-x: hidden;
 }
 
-.testimonial-content {
-	font-weight: 400;
-}
-
-.testimonial-provider {
-	font-weight: 600;
-}
-
 .testimonial-img {
 	box-sizing: border-box;
 	height: 16rem;
-	width: 16rem;
-	min-height: 16rem;
-	min-width: 16rem;
 	aspect-ratio: 1;
 	object-fit: cover;
 	border-radius: 50%;
 	padding: 1rem;
+	margin-bottom: auto;
 	background-color: var(--light-color);
 	border: 0.5vw solid var(--light-primary-color);
 	box-shadow: 0 0 2rem var(--light-secondary-color);
@@ -74,11 +63,12 @@
 .testimonial-text {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	gap: 1rem;
 }
 
 .testimonial-content {
-	margin: auto;
+	font-weight: 400;
 }
 
 .testimonial-provider {
@@ -88,7 +78,6 @@
 .carousel-control {
 	display: flex;
 	gap: 2rem;
-	margin-top: auto;
 }
 
 .carousel-navigation {
@@ -105,16 +94,7 @@
 }
 
 .testimonial-container {
-	flex: 100%;
 	display: flex;
-	flex-direction: row;
-	gap: 2rem;
-}
-
-.testimonial-content-container {
-	margin-top: auto;
-	display: flex;
-	flex-direction: column;
 	gap: 2rem;
 }
 
@@ -170,54 +150,27 @@
 	opacity: 0.5;
 }
 
-@media (max-width: 1024px) {
-	.testimonial-sub-heading {
-		max-width: 100%;
+@media screen and (max-width: 1024px) {
+	.testimonials h3 {
+		width: 100%;
 	}
 
 	.testimonial-body {
-		flex-direction: column;
-		align-items: center;
-		text-align: center;
+		width: 100%;
 	}
 
 	.testimonial-container {
 		flex-direction: column;
 		align-items: center;
 	}
-}
 
-@media screen and (max-width: 1024px) {
+	.testimonial-img {
+		height: 12rem;
+
+	}
+
 	.left-leaves,
 	.right-leaves {
 		display: none;
-	}
-}
-
-@media screen and (max-width: 510px) {
-	.testimonials h3 {
-		width: 90%;
-	}
-	.testimonials h4 {
-		width: 100%;
-	}
-
-	.testimonial-img {
-		height: 11rem;
-		width: 11rem;
-		min-height: 11rem;
-		min-width: 11rem;
-		box-shadow: none;
-	}
-
-	.testimonial-img {
-		height: 11rem;
-		width: 11rem;
-		min-height: 11rem;
-		min-width: 11rem;
-		box-shadow: none;
-	}
-	.testimonial-body {
-		margin: 0;
 	}
 }
